added endpoint for contact info i.e. /contact_info
